# table_deps

./: .gitignore  README.md  main.py  pyproject.toml  query.sql
.claude/: settings.json
table_deps/: __init__.py  cli.py  extractor.py  project_scanner.py
table_deps/frontend_service/: __init__.py  server.py
table_deps/static/: index.html  project_overview.html
test_projects/data_vault/: bv.customer_orders.sql  bv.product_revenue.sql  hub.customer.sql  hub.employee.sql  hub.order.sql  hub.product.sql  link.order_customer.sql  link.order_employee.sql  link.order_product.sql  mart.customer_ltv.sql  mart.sales_summary.sql  raw.customers.sql  raw.employees.sql  raw.order_items.sql  raw.orders.sql  raw.products.sql  sat.customer_details.sql  sat.order_details.sql  sat.product_details.sql
test_projects/forecast_monthly/: gold.forecast_monthly.sql  gold.revenue_by_region.sql  mart.customer_ltv.sql  mart.monthly_sales.sql  raw.calendar.sql  raw.customers.sql  raw.products.sql  raw.sales_transactions.sql  staging.customer_segments.sql  staging.products_enriched.sql  staging.sales_cleaned.sql
test_projects/kimball_retail/: dim.customer.sql  dim.date.sql  dim.product.sql  dim.promotion.sql  dim.store.sql  fact.returns.sql  fact.sales.sql  rpt.customer_360.sql  rpt.product_performance.sql  rpt.sales_by_channel.sql  src.raw_customers.sql  src.raw_products.sql  src.raw_promotions.sql  src.raw_stores.sql  src.raw_transactions.sql
tests/: test_cli.py  test_extractor.py
ui_examples/: analytics_funnel.sql  ecommerce_orders.sql  finance_reporting.sql  hr_payroll.sql
(+9 files in other folders)
