[project]
name = "table-deps"
version = "0.1.0"
description = "Extract table dependencies from SQL queries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
table-deps = "table_deps.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["table_deps"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
